// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel[Base] should render correctly  1`] = `
<div
  class="soui-carousel soui-carousel-wrapper soui-carousel-animation-slide soui-carousel-direction-stop"
  style="width: 600px; height: auto;"
>
  <div
    class="soui-carousel-slider"
    style="height: 280px;"
  >
    <div
      class="soui-carousel-item soui-carousel-item-current"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
      />
    </div>
    <div
      class="soui-carousel-item"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
      />
    </div>
    <div
      class="soui-carousel-item"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
      />
    </div>
    <div
      class="soui-carousel-item"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
      />
    </div>
  </div>
  <div
    class="soui-carousel-indicator-wrapper soui-carousel-indicator-center soui-carousel-indicator-type-circle"
  >
    <div
      class="soui-carousel-indicator soui-carousel-indicator-active"
    />
    <div
      class="soui-carousel-indicator"
    />
    <div
      class="soui-carousel-indicator"
    />
    <div
      class="soui-carousel-indicator"
    />
  </div>
  <div
    class="soui-carousel-arrow-hover soui-carousel-arrow-wrapper"
  >
    <div
      class="soui-carousel-arrow-left soui-carousel-arrow-item"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="soui-carousel-arrow-right soui-carousel-arrow-item"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about animation 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      animation type:
    </div>
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          slide
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          slide-y
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          fade
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-carousel soui-carousel-wrapper soui-carousel-animation-slide soui-carousel-direction-stop"
    style="width: 600px; height: auto;"
  >
    <div
      class="soui-carousel-slider"
      style="height: 280px;"
    >
      <div
        class="soui-carousel-item soui-carousel-item-current"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="soui-carousel-indicator-wrapper soui-carousel-indicator-center soui-carousel-indicator-type-circle"
    >
      <div
        class="soui-carousel-indicator soui-carousel-indicator-active"
      />
      <div
        class="soui-carousel-indicator"
      />
      <div
        class="soui-carousel-indicator"
      />
      <div
        class="soui-carousel-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about indicator 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator position:
    </div>
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          center
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          outer
        </span>
      </div>
    </div>
  </div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator type:
    </div>
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          circle
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          line
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bar
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          number
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-carousel soui-carousel-wrapper soui-carousel-animation-slide soui-carousel-direction-stop"
    style="width: 600px; height: auto;"
  >
    <div
      class="soui-carousel-slider"
      style="height: 280px;"
    >
      <div
        class="soui-carousel-item soui-carousel-item-current"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="soui-carousel-item"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="soui-carousel-indicator-wrapper soui-carousel-indicator-center soui-carousel-indicator-type-circle"
    >
      <div
        class="soui-carousel-indicator soui-carousel-indicator-active"
      />
      <div
        class="soui-carousel-indicator"
      />
      <div
        class="soui-carousel-indicator"
      />
      <div
        class="soui-carousel-indicator"
      />
    </div>
  </div>
</div>
`;
